--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.8.1",
-    "react-native": ">=0.59.0-rc.0 <1.0.x"
+    "react-native": ">=0.59.0-rc.0 <1.0.x",
+    "react-native-electrode-bridge": "^1.5.19"
   },
   "devDependencies": {
     "react": "^16.8.3",
