--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <activity android:name="com.github.megatronking.netbare.ssl.CertificateInstallActivity"
                 android:theme="@style/NetBare"
                 android:excludeFromRecents="true"/>
-        <service android:name="com.github.megatronking.netbare.NetBareService"
+        <service android:name=".VPNService"
             android:permission="android.permission.BIND_VPN_SERVICE">
             <intent-filter>
                 <action android:name="android.net.VpnService" />
