--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,3 @@
 include 'libs'
+include ':electrode-reactnative-bridge'
+project(':electrode-reactnative-bridge').projectDir = new File(rootProject.projectDir, '../../../node_modules/react-native-electrode-bridge/android/electrode-reactnative-bridge')
